--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.netceler.jsr310</groupId>
     <artifactId>jsr310-duration-patch</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>JSR 310 : Patch</name>
 
     <scm>
